--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         </tr>
             <tr>
             <td>
-                <label>Tip: </label><span id="tip">$0.00</span>
+                <label>Tip: </label> 
+                <span id="tip">$0.00</span>
             </td>
             <td>
                 <label >Rate: %</label>
@@ -46,7 +47,7 @@
        <br>
        <br>
       </main>
-       <script src="code.js"></script>
+       <script src="logic.js"></script>
     </div>
     </body>
 </html>
