--- a/index.html
+++ b/index.html
@@ -15,13 +15,12 @@
         <tr>
             <td>
                 <label >Total: $</label>
-                <input id="Total" type="text"   placeholder="0.00" value="" >
+                <input id="total" type="text"   placeholder="0.00" value="" >
             </td>
         </tr>
             <tr>
             <td>
-                <label>Tip: </label> 
-                <span id="tip">$0.00</span>
+                <label>Tip: </label><span id="tip">$0.00</span>
             </td>
             <td>
                 <label >Rate: %</label>
@@ -35,7 +34,7 @@
         </tr>
         <tr>
             <td>
-                <label>Grand Total: <span id="total">$0.00</span></label>
+                <label>Grand Total: <span id="grand-total">$0.00</span></label>
             </td>
         </tr>
         <tr>
